--- a/package.json
+++ b/package.json
@@ -3,11 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "box-node-sdk": "^1.24.1",
-    "express": "^4.16.4",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "axios": "0.18.0",
+    "box-node-sdk": "^1.19.0",
+    "box-react-ui": "23.17.0",
+    "box-ui-elements": "^5.4.1",
+    "classnames": "2.2.5",
+    "draft-js": "0.10.1",
+    "filesize": "3.6.0",
+    "form-serialize": "0.7.2",
+    "immutable": "3.7.4",
+    "jsuri": "1.3.1",
+    "lodash": "4.17.5",
+    "mousetrap": "1.6.1",
+    "pikaday": "1.6.1",
+    "prop-types": "15.5.4",
+    "properties-parser": "0.3.1",
+    "raw-loader": "^0.5.1",
+    "react": "^16.4.1",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.4.1",
+    "react-draggable": "3.0.4",
+    "react-immutable-proptypes": "2.1.0",
+    "react-intl": "2.3.0",
+    "react-measure": "2.0.2",
+    "react-modal": "3.3.1",
+    "react-process-string": "1.2.0",
+    "react-scripts": "1.1.4",
+    "react-tether": "0.6.1",
+    "react-textarea-autosize": "6.0.0",
+    "react-virtualized": "9.13.0",
+    "regenerator-runtime": "0.11.1",
+    "scroll-into-view-if-needed": "1.5.0",
+    "tabbable": "1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
